put photos of the first view

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body onload="startApp()">
 <div id="firstScreen" class="first-screen">
-    <div class="first-screen-image"></div>
+    <div id="firstScreenImage" class="first-screen-image"></div>
     <ul>
         <li>
             <a id="female" href="#">
