do content Homepage

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
 <head>
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <meta charset="UTF-8">
+    <title>
+        <XaXa/>
+    </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -34,9 +36,9 @@
         </li>
         <li>
             <a id="programmer" href="#">
-            <div class="programmer"></div>
-            programmer
-        </a>
+                <div class="programmer"></div>
+                programmer
+            </a>
         </li>
     </ul>
 </div>
@@ -60,7 +62,43 @@
 </nav>
 
 <section id="home" class="home-section">
-    <h1>начало</h1>
+    <main class="home-main">
+        <header class="home-main-header">
+            <h1>SoftFunny Images</h1>
+        </header>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down"href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook"href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/car-ctrl-z.jpg" style="width: 500px" style="height: 500px" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down"href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook"href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/tumblr_mqlgt1jJ3g1sccdh7o1_500.jpg" style="width: 500px" style="height: 500px"alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down"href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook"href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/wifi.jpg" style="width: 500px" style="height: 500px"alt="try/cach">
+        </article>
+    </main>
+    <aside class="home-aside">
+
+
+    </aside>
+
 </section>
 
 <section id="middle" class="middle-section">
