--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         <XaXa/>
     </title>
@@ -9,6 +10,7 @@
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/firts-screen-style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Scrolling Nav JavaScript -->
@@ -16,6 +18,8 @@
     <script src="js/scrolling-nav.js"></script>
     <!-- View Controller JavaScript -->
     <script src="js/ViewController.js"></script>
+
+    <script src="js/MasonryJQuery.js"></script>
 </head>
 
 <body onload="startApp()">
@@ -62,41 +66,90 @@
 </nav>
 
 <section id="home" class="home-section">
+
+    <h1>SoftFunny Images</h1>
+
     <main class="home-main">
-        <header class="home-main-header">
-            <h1>SoftFunny Images</h1>
-        </header>
         <article class="image-container">
             <div class="image-header">
                 <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
-                <a class="down"href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
-                <a class="facebook"href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/car-ctrl-z.jpg" style="width: 500px" style="height: 500px" alt="try/cach">
+            <img src="images/car-ctrl-z.jpg" alt="try/cach">
         </article>
         <article class="image-container">
             <div class="image-header">
                 <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
-                <a class="down"href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
-                <a class="facebook"href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/tumblr_mqlgt1jJ3g1sccdh7o1_500.jpg" style="width: 500px" style="height: 500px"alt="try/cach">
+            <img src="images/linux.jpg" alt="try/cach">
         </article>
         <article class="image-container">
             <div class="image-header">
                 <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
-                <a class="down"href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
-                <a class="facebook"href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/wifi.jpg" style="width: 500px" style="height: 500px"alt="try/cach">
+            <img src="images/wifi.jpg" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/3-apple.jpg" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/programmer-run.jpg" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/60-points.jpg" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/learn-any-language.jpg" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/tumblr_mqlgt1jJ3g1sccdh7o1_500.jpg" alt="try/cach">
         </article>
     </main>
     <aside class="home-aside">
-
-
+        <article class="advertisement-softuni">
+            <a href="https://softuni.bg/" target="_blank"><img src="images/softuni-suite.jpg" alt="SoftUni"></a>
+            <a href="#">Кандидатсваи!</a>
+            <a href="#">Учебен план</a>
+            <a href="#">За софтУни</a>
+        </article>
     </aside>
 
 </section>
