stealing home page

--- a/index.html
+++ b/index.html
@@ -142,13 +142,49 @@
             </div>
             <img src="images/tumblr_mqlgt1jJ3g1sccdh7o1_500.jpg" alt="try/cach">
         </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/css.jpg" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/i-need-breace.jpg" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/night.jpg" alt="try/cach">
+        </article>
+        <article class="image-container">
+            <div class="image-header">
+                <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="down" href="#"><i class="fa fa-thumbs-down" aria-hidden="true"></i><span>Рейтинг</span></a>
+                <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
+                <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
+            </div>
+            <img src="images/rubiCUbe.jpg" alt="try/cach">
+        </article>
     </main>
     <aside class="home-aside">
         <article class="advertisement-softuni">
             <a href="https://softuni.bg/" target="_blank"><img src="images/softuni-suite.jpg" alt="SoftUni"></a>
-            <a href="#">Кандидатсваи!</a>
-            <a href="#">Учебен план</a>
-            <a href="#">За софтУни</a>
+            <a href="https://softuni.bg/apply" target="_blank" class="button">Кандидатсваи!</a>
+            <a href="https://softuni.bg/curriculum" target="_blank" class="button">Учебен план</a>
+            <a href="https://softuni.bg/about" target="_blank" class="button">За софтУни</a>
         </article>
     </aside>
 
