--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <a class="page-scroll" href="#home">Начало</a>
         </li>
         <li>
+            <a class="page-scroll" href="#images">Снимки</a>
+        </li>
+        <li>
             <a class="page-scroll" href="#middle">Среда</a>
         </li>
         <li>
@@ -66,10 +69,14 @@
 </nav>
 
 <section id="home" class="home-section">
+    <h1>Начало</h1>
+</section>
+
+<section id="images" class="images-section">
 
     <h1>SoftFunny Images</h1>
 
-    <main class="home-main">
+    <main class="images-main">
         <article class="image-container">
             <div class="image-header">
                 <a class="up" href="#"><i class="fa fa-thumbs-up" aria-hidden="true"></i><span>Рейтинг</span></a>
@@ -179,7 +186,7 @@
             <img src="images/rubiCUbe.jpg" alt="try/cach">
         </article>
     </main>
-    <aside class="home-aside">
+    <aside class="images-aside">
         <article class="advertisement-softuni">
             <a href="https://softuni.bg/" target="_blank"><img src="images/softuni-suite.jpg" alt="SoftUni"></a>
             <a href="https://softuni.bg/apply" target="_blank" class="button">Кандидатсваи!</a>
