--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 
 <section id="home" class="home-section">
     <h1>Начало</h1>
+
+    <div class="home-section-nav">
+        <a class="page-scroll window" href="#images"></a>
+        <a class="page-scroll window" href="#middle"></a>
+        <a class="page-scroll window" href="#end"></a>
+        <a class="page-scroll window" href="#contact"></a>
+    </div>
 </section>
 
 <section id="images" class="images-section">
