--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 </section>
 
-<section id="images" class="images-section" x>
+<section id="images" class="images-section">
 
     <h1>SoftFunny Images</h1>
 
@@ -217,7 +217,77 @@
 </section>
 
 <section id="contact" class="contact-section">
-    <h1>Контакти</h1>
+    <main class="contact-main">
+        <article class="person">
+            <img src="images/mulhousee.jpg" alt="portret"/>
+            <div class="person-info">
+            <h1 class="name">Александър Петров</h1>
+            <p class="qualification">Студент в SoftUni</p>
+            <p class="mail">sa6opp@abv.bg</p>
+            <p class="phone">+359 888 88 88 88    </p>
+            </div>
+            <ul class="social-links">
+                <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href=""><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            </ul>
+        </article>
+        <article class="person">
+            <img src="images/bart.gif" alt="portret"/>
+            <div class="person-info">
+                <h1 class="name">Александър Петров</h1>
+                <p class="qualification">Студент в SoftUni</p>
+                <p class="mail">sa6opp@abv.bg</p>
+                <p class="phone">+359 888 88 88 88    </p>
+            </div>
+            <ul class="social-links">
+                <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href=""><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            </ul>
+        </article>
+        <article class="person">
+            <img src="images/homar.png" alt="portret"/>
+            <div class="person-info">
+                <h1 class="name">Александър Петров</h1>
+                <p class="qualification">Студент в SoftUni</p>
+                <p class="mail">sa6opp@abv.bg</p>
+                <p class="phone">+359 888 88 88 88    </p>
+            </div>
+            <ul class="social-links">
+                <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href=""><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            </ul>
+        </article>
+        <article class="person">
+            <img src="images/barni.gif" alt="portret"/>
+            <div class="person-info">
+                <h1 class="name">Александър Петров</h1>
+                <p class="qualification">Студент в SoftUni</p>
+                <p class="mail">sa6opp@abv.bg</p>
+                <p class="phone">+359 888 88 88 88    </p>
+            </div>
+            <ul class="social-links">
+                <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href=""><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            </ul>
+        </article>
+
+
+    </main>
+    <aside class="contact-aside">
+        <article class="advertisement advertisement-softuni">
+            <a href="https://softuni.bg/" target="_blank"><img src="images/softuni-suite.jpg" alt="SoftUni"></a>
+            <a href="https://softuni.bg/apply" target="_blank" class="button">Кандидатсваи!</a>
+            <a href="https://softuni.bg/curriculum" target="_blank" class="button">Учебен план</a>
+            <a href="https://softuni.bg/about" target="_blank" class="button">За софтУни</a>
+        </article>
+        <article class="advertisement advertisement-images">
+            <a href="http://funny-programming.tumblr.com/"><p>Oще смешни картинки</p></a>
+        </article>
+    </aside>
 </section>
 
 <section id="end" class="end-section">
