--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
     <title>
         <XaXa/>
     </title>
@@ -68,13 +68,12 @@
 </nav>
 
 <section id="home" class="home-section">
-    <h1>Начало</h1>
-
     <div class="home-section-nav">
-        <a class="page-scroll window" href="#images"></a>
-        <a class="page-scroll window" href="#middle"></a>
-        <a class="page-scroll window" href="#contact"></a>
-        <a class="page-scroll window" href="#end"></a>
+        <h1>SoftFunny Images</h1>
+        <a class="page-scroll window window-images" href="#images"><span>Картинки</span></a>
+        <a class="page-scroll window window-middle" href="#middle"><span>Среда</span></a>
+        <a class="page-scroll window window-contact" href="#contact"><span>Контакти</span></a>
+        <a class="page-scroll window window-end" href="#end"><span>Край</span></a>
     </div>
 </section>
 
