--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi"/>
     <title>
         <XaXa/>
     </title>
@@ -47,22 +48,25 @@
 </div>
 
 <nav id="navbar" class="navbar">
-    <ul class="nav navbar-nav">
-        <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-        <li>
-            <a class="page-scroll" href="#home">Начало</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="#images">Снимки</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="#middle">Среда</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="#contact">Контакти</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="#end">Край</a>
+    <ul>
+        <li class="hidden-menu"><a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
+            <ul class="nav navbar-nav">
+                <li>
+                    <a class="page-scroll" href="#home">Начало</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#images">Снимки</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#middle">Среда</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#contact">Контакти</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#end">Край</a>
+                </li>
+            </ul>
         </li>
     </ul>
 </nav>
@@ -212,7 +216,9 @@
 </section>
 
 <section id="middle" class="middle-section">
-    <iframe src="//giphy.com/embed/yYSSBtDgbbRzq" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/frustrated-annoyed-programming-yYSSBtDgbbRzq"></a></p>
+    <iframe src="//giphy.com/embed/yYSSBtDgbbRzq" width="480" height="360" frameBorder="0" class="giphy-embed"
+            allowFullScreen></iframe>
+    <p><a href="http://giphy.com/gifs/frustrated-annoyed-programming-yYSSBtDgbbRzq"></a></p>
 </section>
 
 <section id="contact" class="contact-section">
@@ -220,10 +226,10 @@
         <article class="person">
             <img src="images/mulhousee.jpg" alt="portret"/>
             <div class="person-info">
-            <h1 class="name">Александър Петров</h1>
-            <p class="qualification">Студент в SoftUni</p>
-            <p class="mail">sa6opp@abv.bg</p>
-            <p class="phone">+359 888 88 88 88    </p>
+                <h1 class="name">Александър Петров</h1>
+                <p class="qualification">Студент в SoftUni</p>
+                <p class="mail">sa6opp@abv.bg</p>
+                <p class="phone">+359 888 88 88 88 </p>
             </div>
             <ul class="social-links">
                 <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -237,7 +243,7 @@
                 <h1 class="name">Александър Петров</h1>
                 <p class="qualification">Студент в SoftUni</p>
                 <p class="mail">sa6opp@abv.bg</p>
-                <p class="phone">+359 888 88 88 88    </p>
+                <p class="phone">+359 888 88 88 88 </p>
             </div>
             <ul class="social-links">
                 <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -251,7 +257,7 @@
                 <h1 class="name">Александър Петров</h1>
                 <p class="qualification">Студент в SoftUni</p>
                 <p class="mail">sa6opp@abv.bg</p>
-                <p class="phone">+359 888 88 88 88    </p>
+                <p class="phone">+359 888 88 88 88 </p>
             </div>
             <ul class="social-links">
                 <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -265,7 +271,7 @@
                 <h1 class="name">Александър Петров</h1>
                 <p class="qualification">Студент в SoftUni</p>
                 <p class="mail">sa6opp@abv.bg</p>
-                <p class="phone">+359 888 88 88 88    </p>
+                <p class="phone">+359 888 88 88 88 </p>
             </div>
             <ul class="social-links">
                 <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
