--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/car-ctrl-z.jpg" alt="try/cach">
+            <img src="images/car-ctrl-z.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -102,7 +102,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/linux.jpg" alt="try/cach">
+            <img src="images/linux.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -111,7 +111,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/wifi.jpg" alt="try/cach">
+            <img src="images/wifi.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -120,7 +120,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/3-apple.jpg" alt="try/cach">
+            <img src="images/3-apple.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -129,7 +129,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/programmer-run.jpg" alt="try/cach">
+            <img src="images/programmer-run.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -138,7 +138,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/60-points.jpg" alt="try/cach">
+            <img src="images/60-points.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -147,7 +147,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/learn-any-language.jpg" alt="try/cach">
+            <img src="images/learn-any-language.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -156,7 +156,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/tumblr_mqlgt1jJ3g1sccdh7o1_500.jpg" alt="try/cach">
+            <img src="images/tumblr_mqlgt1jJ3g1sccdh7o1_500.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -165,7 +165,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/css.jpg" alt="try/cach">
+            <img src="images/css.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -174,7 +174,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/i-need-breace.jpg" alt="try/cach">
+            <img src="images/i-need-breace.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -183,7 +183,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/night.jpg" alt="try/cach">
+            <img src="images/night.jpg" alt="try/cach"/>
         </article>
         <article class="image-container">
             <div class="image-header">
@@ -192,7 +192,7 @@
                 <a class="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i><span>Сподели</span></a>
                 <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i><span>Сподели</span></a>
             </div>
-            <img src="images/rubiCUbe.jpg" alt="try/cach">
+            <img src="images/rubiCUbe.jpg" alt="try/cach"/>
         </article>
     </main>
     <aside class="images-aside">
