cool transition in home view .window

--- a/index.html
+++ b/index.html
@@ -74,10 +74,30 @@
 <section id="home" class="home-section">
     <div class="home-section-nav">
         <h1>SoftFunny Images</h1>
-        <a class="page-scroll window window-images" href="#images"><span>Картинки</span></a>
-        <a class="page-scroll window window-middle" href="#middle"><span>Среда</span></a>
-        <a class="page-scroll window window-contact" href="#contact"><span>Контакти</span></a>
-        <a class="page-scroll window window-end" href="#end"><span>Край</span></a>
+        <a class="page-scroll" href="#images">
+            <div class="window window-images">
+                <img src="images/home-images.jpg">
+                <p>Картинки</p>
+            </div>
+        </a>
+        <a class="page-scroll" href="#middle">
+            <div class="window window-middle">
+                <img src="images/home-middle.jpg">
+                <p>GIF-че</p>
+            </div>
+        </a>
+        <a class="page-scroll" href="#contact">
+            <div class="window window-contact">
+                <img src="images/home-contact.jpg">
+                <p>Контакти</p>
+            </div>
+        </a>
+        <a class="page-scroll" href="#end">
+            <div class="window window-end">
+                <img src="images/home-footer.jpg">
+                <p>Картинки</p>
+            </div>
+        </a>
     </div>
 </section>
 
